--- a/template.env
+++ b/template.env
@@ -1,4 +1,5 @@
+hostname=your-hostname.local or some-ip or even 127.0.0.1
+database=your-database-name
+passphrase=some-fancy-passphrase
 username=your-username
 password=your-password
-host=127.0.0.1
-port=5984
